Center address and phone on smallest size

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -1910,6 +1910,10 @@ html.js fieldset.collapsible div.fieldset-wrapper {
     }  
   }
 
+  [data-pane="2506"] {
+    text-align: center;
+  }
+
   .header-phone,
   .header-fax {
     display: block;
