Remove logos from the floating header at large screens

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1746,7 +1746,10 @@ html.js fieldset.collapsible div.fieldset-wrapper {
           display: inline; }
         #block-panels-mini-header.sticky-header .row-one .left-column .header-phone-icon {
           font-size: 1em;
-          line-height: 2; } }
+          line-height: 2; }
+          #block-panels-mini-header.sticky-header .row-one .left-column .header-phone-icon:before {
+            content: "p: ";
+            font-family: FontAwesome, sans-serif; } }
     @media (min-width: 860px) {
       #block-panels-mini-header.sticky-header .row-one .left-column {
         left: 0;
@@ -1764,7 +1767,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
         #block-panels-mini-header.sticky-header .row-one .left-column .header-phone {
           line-height: 1.5; }
         #block-panels-mini-header.sticky-header .row-one .left-column .header-phone-icon {
-          line-height: 1; }
+          display: none; }
         #block-panels-mini-header.sticky-header .row-one .left-column .header-address {
           display: block; } }
     #block-panels-mini-header.sticky-header .row-one .left-column .header-address-line1,
@@ -1819,9 +1822,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
           width: 225px;
           margin: 0; }
         #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-icon:before {
-          width: 1em;
-          height: 1em;
-          margin-right: 3px; }
+          display: none; }
         #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-text {
           display: inline-block; }
         #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2434"] {
