Add US flag to switch to English

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2242,7 +2242,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
   margin-right: 3px;
 }
 
-.i18n-es .stick-header .language-icon:before {
+.i18n-es .sticky-header .language-icon:before {
   content: "";
   background: url(https://lipis.github.io/flag-icon-css/flags/4x3/us.svg) no-repeat center center;
   background-size: cover;
