--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1879,7 +1879,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
   display: inline-block;
   margin-right: 3px; }
 
-.i18n-es .stick-header .language-icon:before {
+.i18n-es .sticky-header .language-icon:before {
   content: "";
   background: url(https://lipis.github.io/flag-icon-css/flags/4x3/us.svg) no-repeat center center;
   background-size: cover;
