Fix display of some blocks in the floating header at small sizes

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1799,7 +1799,6 @@ html.js fieldset.collapsible div.fieldset-wrapper {
     #block-panels-mini-header.sticky-header .row-one .right-column .pane-widgets-s-socialmedia-share-default #widgets-element-socialmedia_addthis-email {
       margin-right: 0; }
     #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] {
-      display: inline-block;
       vertical-align: bottom; }
       #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-icon:before {
         width: 25px;
@@ -1808,8 +1807,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
       #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2496"] .language-text {
         display: none; }
     #block-panels-mini-header.sticky-header .row-one .right-column div[data-pane="2434"] {
-      width: auto;
-      display: inline-block; }
+      width: auto; }
     @media (min-width: 1106px) {
       #block-panels-mini-header.sticky-header .row-one .right-column {
         position: static;
