--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2148,6 +2148,12 @@ html.js fieldset.collapsible div.fieldset-wrapper {
       @include breakpoint(681px) {
         border: 1px solid #ccc;
       }
+
+      @include breakpoint(1106px) {
+        div[data-pane="2508"] {
+          display: none;
+        }
+      }
     }
 
     .right-column {
@@ -3215,6 +3221,19 @@ body.i18n-es {
     }
     @include breakpoint(1348px) {
       font-size: 1.2em;
+    }
+  }
+
+  .sticky-header {
+    .pane-superfish-1 #superfish-1 li a {
+      @include breakpoint(681px) {
+        font-size: 1.9vw;
+        padding: 0 0.7vw;
+      }
+      @include breakpoint(1106px) {
+        font-size: calc((100vw - 540px)*0.017);
+        padding: 0 0.695vw;
+      }
     }
   }
 }
