Main menu adjustments for Spanish

--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2877,12 +2877,12 @@ form#user-login, form#user-pass {
     font-size: 1.2em; } }
 
 @media (min-width: 681px) {
-  body.i18n-es .sticky-header .pane-superfish-1 #superfish-1 li a {
+  body.i18n-es #block-panels-mini-header.sticky-header #superfish-1 > li a {
     font-size: 1.9vw;
     padding: 0 0.7vw; } }
 
 @media (min-width: 1106px) {
-  body.i18n-es .sticky-header .pane-superfish-1 #superfish-1 li a {
+  body.i18n-es #block-panels-mini-header.sticky-header #superfish-1 > li a {
     font-size: calc((100vw - 540px)*0.017);
     padding: 0 0.695vw; } }
 /*# sourceMappingURL=dgr_rubik_style.css.map */
