--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -1520,6 +1520,16 @@ html.js fieldset.collapsible div.fieldset-wrapper {
     border: 1px solid #ccc;
     padding: 0.5em;
     position: relative; }
+    #block-panels-mini-header .row-one .middle-column .pane-superfish-1 {
+      display: none; }
+      @media (min-width: 681px) {
+        #block-panels-mini-header .row-one .middle-column .pane-superfish-1 {
+          display: block; } }
+    #block-panels-mini-header .row-one .middle-column .pane-current-17,
+    #block-panels-mini-header .row-one .middle-column .pane-current-12,
+    #block-panels-mini-header .row-one .middle-column .pane-widgets-s-socialmedia-share-default {
+      display: block;
+      text-align: center; }
     @media (min-width: 480px) {
       #block-panels-mini-header .row-one .middle-column {
         -webkit-box-pack: center;
@@ -1541,7 +1551,11 @@ html.js fieldset.collapsible div.fieldset-wrapper {
             width: 100%; }
           #block-panels-mini-header .row-one .middle-column .inner > div:last-child {
             display: block;
-            position: initial; } }
+            position: initial; }
+          #block-panels-mini-header .row-one .middle-column .inner .pane-current-17,
+          #block-panels-mini-header .row-one .middle-column .inner .pane-current-12,
+          #block-panels-mini-header .row-one .middle-column .inner .pane-widgets-s-socialmedia-share-default {
+            display: none; } }
       @media (min-width: 506px) {
         #block-panels-mini-header .row-one .middle-column .inner > div:last-child {
           display: none; } }
@@ -1559,11 +1573,11 @@ html.js fieldset.collapsible div.fieldset-wrapper {
     @media (min-width: 506px) and (max-width: 1104px) {
       #block-panels-mini-header .row-one .right-column .inner > div:nth-child(2) {
         display: inline-block;
-        width: 60%;
+        width: calc(100% - 90px);
         vertical-align: middle; }
       #block-panels-mini-header .row-one .right-column .inner > div:nth-child(3) {
         display: inline-block;
-        width: 40%;
+        width: auto;
         vertical-align: middle; }
         #block-panels-mini-header .row-one .right-column .inner > div:nth-child(3) .widgets-element {
           width: 25px; }
@@ -1578,7 +1592,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
     margin-left: 0;
     margin-right: 0.5em;
     text-align: center; }
-    #block-panels-mini-header .row-one .left-column [data-pane="2433"] p {
+    #block-panels-mini-header .row-one .left-column p {
       margin-bottom: 0; }
   #block-panels-mini-header .row-one .right-column,
   #block-panels-mini-header .row-one .left-column {
@@ -1643,6 +1657,11 @@ html.js fieldset.collapsible div.fieldset-wrapper {
           -webkit-box-pack: center;
               -ms-flex-pack: center;
                   justify-content: center; } }
+  #block-panels-mini-header .row-one .pane-superfish-2 {
+    display: block; }
+    @media (min-width: 681px) {
+      #block-panels-mini-header .row-one .pane-superfish-2 {
+        display: none; } }
   #block-panels-mini-header .row-one [data-pane="2506"] {
     text-align: center; }
   #block-panels-mini-header .row-one .header-phone,
