No breakpoint panel solution for the sticky header

--- a/dgr_rubik_style.scss
+++ b/dgr_rubik_style.scss
@@ -2226,7 +2226,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
           }
         }
 
-        pane-widgets-s-socialmedia-share-default {
+        .pane-widgets-s-socialmedia-share-default {
           width: auto;
         }
       }
@@ -2251,7 +2251,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
           }
         }
 
-        pane-widgets-s-socialmedia-share-default{
+        .pane-widgets-s-socialmedia-share-default{
           width: 100%;
         }
       }
