--- a/dgr_rubik_style.css
+++ b/dgr_rubik_style.css
@@ -2308,7 +2308,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
         #block-panels-mini-header.sticky-header .row-one .right-column .pane-current-12 .language-text {
           display: none; }
       /* line 2229, Users/palagpatski/Documents/WEB DEV/dgr-rubik/dgr_rubik_style.scss */
-      #block-panels-mini-header.sticky-header .row-one .right-column pane-widgets-s-socialmedia-share-default {
+      #block-panels-mini-header.sticky-header .row-one .right-column .pane-widgets-s-socialmedia-share-default {
         width: auto; } }
     @media (min-width: 1106px) {
       /* line 2185, Users/palagpatski/Documents/WEB DEV/dgr-rubik/dgr_rubik_style.scss */
@@ -2328,7 +2328,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
         #block-panels-mini-header.sticky-header .row-one .right-column .pane-current-12 .language-text {
           display: inline-block; }
         /* line 2254, Users/palagpatski/Documents/WEB DEV/dgr-rubik/dgr_rubik_style.scss */
-        #block-panels-mini-header.sticky-header .row-one .right-column pane-widgets-s-socialmedia-share-default {
+        #block-panels-mini-header.sticky-header .row-one .right-column .pane-widgets-s-socialmedia-share-default {
           width: 100%; } }
     /* line 2259, Users/palagpatski/Documents/WEB DEV/dgr-rubik/dgr_rubik_style.scss */
     #block-panels-mini-header.sticky-header .row-one .right-column .pane-uuid-c30f5d3d-002d-498d-85f4-941d6a820d28 {
